// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux Alerts Module Initial reducer state 1`] = `
Object {
  "cache": Object {},
  "queue": Array [],
  "syncError": false,
}
`;

exports[`Redux Alerts Module Simple Actions: snapshot and reducer test getAreaAlerts 1`] = `
Object {
  "meta": Object {
    "offline": Object {
      "commit": Object {
        "meta": Object {
          "alertId": "areaID_datasetSlugMock",
          "area": Object {
            "geostore": Object {
              "id": "geostoreID",
            },
            "id": "areaID",
          },
          "confidenceKey": undefined,
          "datasetSlug": "datasetSlugMock",
          "dateKey": "dateKeyMock",
          "minDate": 2021-05-25T12:00:00.000Z,
        },
        "type": "alerts/GET_ALERTS_COMMIT",
      },
      "effect": Object {
        "deserialize": false,
        "headers": Object {
          "Content-Type": "text/csv",
          "Origin": "com.wri.forestwatcher",
          "x-api-key": undefined,
        },
        "url": "undefined/dataset/undefined/latest/query/csv?geostore_origin=rw&geostore_id=geostoreID&sql=select latitude, longitude, dateKeyMock from tableNameMock where dateKeyMock > '2021-05-25' ORDER BY dateKeyMock DESC LIMIT 10000",
      },
      "rollback": Object {
        "meta": Object {
          "alertId": "areaID_datasetSlugMock",
        },
        "type": "alerts/GET_ALERTS_ROLLBACK",
      },
    },
  },
  "payload": "areaID_datasetSlugMock",
  "type": "alerts/GET_ALERTS_REQUEST",
}
`;

exports[`Redux Alerts Module Simple Actions: snapshot and reducer test getAreaAlerts 2`] = `
Object {
  "cache": Object {},
  "queue": Array [
    "areaID_datasetSlugMock",
  ],
  "syncError": false,
}
`;

exports[`Redux Alerts Module Simple Actions: snapshot and reducer test getAreaAlertsWithConfidence 1`] = `
Object {
  "meta": Object {
    "offline": Object {
      "commit": Object {
        "meta": Object {
          "alertId": "areaID_datasetSlugMock",
          "area": Object {
            "geostore": Object {
              "id": "geostoreID",
            },
            "id": "areaID",
          },
          "confidenceKey": "confidenceKeyMock",
          "datasetSlug": "datasetSlugMock",
          "dateKey": "dateKeyMock",
          "minDate": 2021-05-25T12:00:00.000Z,
        },
        "type": "alerts/GET_ALERTS_COMMIT",
      },
      "effect": Object {
        "deserialize": false,
        "headers": Object {
          "Content-Type": "text/csv",
          "Origin": "com.wri.forestwatcher",
          "x-api-key": undefined,
        },
        "url": "undefined/dataset/undefined/latest/query/csv?geostore_origin=rw&geostore_id=geostoreID&sql=select latitude, longitude, dateKeyMock, confidenceKeyMock from tableNameMock where dateKeyMock > '2021-05-25' ORDER BY dateKeyMock DESC LIMIT 10000",
      },
      "rollback": Object {
        "meta": Object {
          "alertId": "areaID_datasetSlugMock",
        },
        "type": "alerts/GET_ALERTS_ROLLBACK",
      },
    },
  },
  "payload": "areaID_datasetSlugMock",
  "type": "alerts/GET_ALERTS_REQUEST",
}
`;

exports[`Redux Alerts Module Simple Actions: snapshot and reducer test getAreaAlertsWithConfidence 2`] = `
Object {
  "cache": Object {},
  "queue": Array [
    "areaID_datasetSlugMock",
  ],
  "syncError": false,
}
`;
